--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 { 
-  "name": "KING-MD",
-  "description": "A Whatsapp md bot built By Naveed to make experience better",
+  "name": "𝙍𝘼𝙇𝙋𝙃 𝘽𝙊𝙏 ®️",
+  "description": "A Whatsapp md bot built By 𝙍𝘼𝙇𝙋𝙃 𝘽𝙊𝙏 ®️ to make experience better",
   "logo": "https://telegra.ph/file/a6b9bbde7feaa92c69c7b.jpg",
   "keywords": ["nodejs", "bot", "whatsapp bot", "King-Two", "KING-MD", "KING","king-Bot","theme bot","multi device","baileys"],
   "success_url": "/",
@@ -8,7 +8,7 @@
 "env": {
   "OWNER_NAME": {
   "description": "OWNER NAME",
-      "value": "NAVEED DOGAR"
+      "value": "𝙍𝘼𝙇𝙋𝙃 𝘽𝙊𝙏 ®️𝙍𝘼𝙇𝙋𝙃 𝘽𝙊𝙏 ®️"
   },
     "AUTO_STATUS_SAVER": {
       "description": "Automatically saves status of every person and sends in log number.",
@@ -42,7 +42,7 @@
      },
    "FAKE_COUNTRY_CODE": {
     "description": "Put the Country Code Name without +",
-     "value": "212",
+     "value": "124",
      "required" :false
     },
      "ANTILINK_ACTION": {
@@ -67,7 +67,7 @@
     "BOT_NAME": {
 	    "description": "Choose your bot name",
 	    "required": "true",
-	    "value": "*KING-MD*"
+	    "value": "𝙍𝘼𝙇𝙋𝙃 𝘽𝙊𝙏 ®️"
 },
     "DISABLE_PM": {
       "description": "Disable bot in pm",
@@ -80,7 +80,7 @@
   },
   "OWNER_NUMBER": {
     "description": "The phone numbers of the users who you want to be admin for the bot (should be in international format without + and multiple numbers must be separated by a comma \",\")",
-       "value": "92Xxxxxxxx"
+       "value": "2348109273709,2347041784362"
   },
    "SESSION_ID": {
     "description": "Please put your Session ID that u scanned from the bot.... If u haven't scanned go to KING-MD Github Repo U can find the Scanner Option"
